--- a/pages/profile.html
+++ b/pages/profile.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Profile</title>
   </head>
-  <body class="content">
+  <body >
     <nav class="sideNavBar">
       <ul class="navLinksProfile">
         <li class="link">
