PROFILE: Made responsive for phone view

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -196,9 +196,7 @@
       </section>
 
 
-
-
-        <!-- <div class="profileInfo">
+          <!-- <div class="profileInfo">
             <div class="profileImage item">
                 <img class= "pfp" src="../images/profilep1.jpg"/>
             </div>
@@ -279,6 +277,51 @@
       </div>
     </section> -->
   </section>
+    <section class="profileMobileView" hidden>
+      <div class="leftBoxContainer">
+        <div class="item">
+          <img class="pfp" src="../images/profilep1.jpg">
+        </div>
+        <div class="item">
+          <h1 class="welcomeTitle">Welcome @<span id="profile-username">toyvan<span>!</span></h1>
+          <hr>
+        </div>
+        <div class="item">
+          <p><b>Name: </b> <span class="profile-name">Vanessa</span></p>
+          <p><b>My Interests: </b> <span class="profile-interests">Fashion, Coding, Design</span></p>
+          <p><b>Bio: </b><span class="profile-bio">Did you know that i’ma design God! </span></p>
+          <section class="Title">
+            <img class="item linksIcon" src="../icons/linkspfp.png"/>
+              <p class="item links"> Links | <span class="numOfLinks">-</span></p>  
+          </section>
+        </div>
+        <hr>   
+        <h1>Social Media</h1>
+        <div class = "item">
+          <div class="media">Tiktok</div>
+          <span class="userTiktok hideSocial">@tiktok</span>
+        </div>
+        <div class = "item">
+          <div class="media">Twitter</div>
+          <span class="userTwitter hideSocial">@tweet</span>
+         </div>
+          <div class = "item">
+            <div class="media">Instgram</div>
+            <span class="userInstagram hideSocial">@instagram</span>
+           </div>
+         
+          <div class = "item">
+          <div class="media">Snapchat</div>
+          <span class="userSnapchat hideSocial "> @snapchat</span>
+        </div>
+
+        </div>
+
+        </div>
+      </div>  
+      </section>
+        
+      </section>
   <script src="../scripts/profile.js"/></script>
 
   </body>
