--- a/pages/profile.html
+++ b/pages/profile.html
@@ -122,7 +122,7 @@
       <section class= "rightBox">
         <div class="rightBoxContainer">
           <div class="item linksPosition">
-            <h1 class="linksTitle">Most Reccent Links</h1>
+            <h1 class="linksTitle">Most Recent Links</h1>
             <section class="mostRecentThree">
               <div> 
                 <p class="left"><b>Name: </b> <span class="mr31name">Deandra</span></p>
@@ -140,7 +140,7 @@
           </div>
           <div class="item">
             <div class="personalContainerNav">
-              <div class="itemN" id="qProfile"><h1>Questionare</h1></div>
+              <div class="itemN" id="qProfile"><h1>Questionnaire</h1></div>
               <div class="itemN" id="sProfile"><h1>Social Media</h1></div>
             </div>
             <div class="personalContainer">
@@ -160,13 +160,13 @@
                     <div class="column">
                   <div class = "item">
                   <div class="media">Tiktok</div>
-                  <span class="userTiktok hideSocial">@tiktok</span>
+                  <span class="userTiktok">@tiktok</span>
                 </div>
                 </div>
                 <div class="column">
                   <div class = "item">
                   <div class="media">Twitter</div>
-                  <span class="userTwitter hideSocial">@tweet</span>
+                  <span class="userTwitter">@tweet</span>
                   </div>
                  </div>
 
@@ -175,15 +175,15 @@
                     <div class="column">
 
                   <div class = "item">
-                    <div class="media">Instgram</div>
-                    <span class="userInstagram hideSocial">@instagram</span>
+                    <div class="media">Instagram</div>
+                    <span class="userInstagram">@instagram</span>
                    </div>
                   </div>
                   <div class="column">
 
                   <div class = "item">
                   <div class="media">Snapchat</div>
-                  <span class="userSnapchat hideSocial "> @snapchat</span>
+                  <span class="userSnapchat"> @snapchat</span>
                 </div>
                   </div>
 
