--- a/pages/features.html
+++ b/pages/features.html
@@ -22,15 +22,12 @@
         <ul class="menu">
           <li class="link"><a href="./home.html" class="link">Home</a></li>
           <li class="link"><a href="./about.html" class="link">About</a></li>
-          <li class="link">
-            <a href="./features.html" class="link">Features</a>
-          </li>
-          <li class="link">
-            <a href="./contact.html" class="link">Contact</a>
-          </li>
+          <li class="link"><a href="./features.html" class="link">Team</a></li>
+          <li class="link"><a href="./contact.html" class="link">Contact</a></li>
+          <li class="link"><a href="./login.html" class="link">Login</a></li>
         </ul>
       </header>
-    </nav>
+  </nav>
 
     <h1 class="title animateFadein">The Team</h1>
 
