--- a/pages/profile.html
+++ b/pages/profile.html
@@ -159,14 +159,14 @@
                   <div class="row">
                     <div class="column">
                   <div class = "item">
-                  <div class="media">Tiktok</div>
-                  <span class="userTiktok">@tiktok</span>
+                    <div class="media"><img src="../icons/tiktok.png"></div>
+                    <span class="userTiktok">@tiktok</span>
                 </div>
                 </div>
                 <div class="column">
                   <div class = "item">
-                  <div class="media">Twitter</div>
-                  <span class="userTwitter">@tweet</span>
+                    <div class="media"><img src="../icons/twitter.png"></div>
+                    <span class="userTwitter">@tweet</span>
                   </div>
                  </div>
 
@@ -175,15 +175,15 @@
                     <div class="column">
 
                   <div class = "item">
-                    <div class="media">Instagram</div>
+                    <div class="media"><img src="../icons/instagram.png"></div>
                     <span class="userInstagram">@instagram</span>
                    </div>
                   </div>
                   <div class="column">
 
                   <div class = "item">
-                  <div class="media">Snapchat</div>
-                  <span class="userSnapchat"> @snapchat</span>
+                    <div class="media"><img src="../icons/snapchat.png"></div>
+                    <span class="userSnapchat"> @snapchat</span>
                 </div>
                   </div>
 
