removed stuff from sign up page

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -52,26 +52,26 @@
             <input type="text" id="register-body-lname" name="lname" placeholder="Last Name" required>
             <br>
 
-            <label class="register-body-headings" for="gender">Gender</label><br>
+            <!-- <label class="register-body-headings" for="gender">Gender</label><br>
             <select name="gender" id="register-body-gender" required>
                 <option value="">Select your gender:</option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
                 <option value="other">Other</option>
-            </select><br><br>
+            </select><br><br> -->
 
-            <label class="register-body-headings" for="age">Age</label><br>
-            <input type="number" id="register-body-age" name="age" min="1" max="200" placeholder="Age" required><br>
+            <!-- <label class="register-body-headings" for="age">Age</label><br>
+            <input type="number" id="register-body-age" name="age" min="1" max="200" placeholder="Age" required><br> -->
 
             <!-- <label class="headings" for="date">Date of Birth</label><br>
             <input type="date" id="date" name="date" placeholder="Date" required><br> -->
 
-            <label class="register-body-headings" for="location">Location</label><br>
-            <input type="text" id="register-body-location" name="location" placeholder="Location" required><br>
+            <!-- <label class="register-body-headings" for="location">Location</label><br>
+            <input type="text" id="register-body-location" name="location" placeholder="Location" required><br> -->
 
-            <label class="register-body-headings" for="school">School/Major</label><br>
+            <!-- <label class="register-body-headings" for="school">School/Major</label><br>
             <input type="text" id="register-body-school" name="school" placeholder="School" required>
-            <input type="text" id="register-body-major" name="major" placeholder="Major" required><br>
+            <input type="text" id="register-body-major" name="major" placeholder="Major" required><br> -->
 
             <label class="register-body-headings" for="email">Email</label><br>
             <input type="text" id="register-body-email" name="email" placeholder="Email" required><br>
@@ -86,7 +86,6 @@
             <label class="register-body-desc">Letters and numbers only. No special characters. (Min. 8 characters)</label><br><br>
 
             <a href="../pages/question.html"><button class="login-body__button"  type="submit">Register</button></a>
-
 
         </form>
 
