--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="register-html">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,26 +13,23 @@
 <body>
     <nav class="headerOther">
         <header class="header ">
-          <a href="./home.html" class="logo"
-            ><img src="../images/logoG2.png" alt=""
-          /></a>
-    
-          <input class="menu-btn" type="checkbox" id="menu-btn" />
-          <label class="menu-icon" for="menu-btn"
-            ><span class="navicon"></span
+            <a href="./home.html" class="logo"><img src="../images/logoG2.png" alt="" /></a>
+
+            <input class="menu-btn" type="checkbox" id="menu-btn" />
+            <label class="menu-icon" for="menu-btn"><span class="navicon"></span
           ></label>
-          <ul class="menu">
-            <li class="link"><a href="./home.html" class="link">Home</a></li>
-            <li class="link"><a href="./about.html" class="link">About</a></li>
-            <li class="link">
-              <a href="./features.html" class="link">Features</a>
-            </li>
-            <li class="link">
-              <a href="./contact.html" class="link">Contact</a>
-            </li>
-          </ul>
+            <ul class="menu">
+                <li class="link"><a href="./home.html" class="link">Home</a></li>
+                <li class="link"><a href="./about.html" class="link">About</a></li>
+                <li class="link">
+                    <a href="./features.html" class="link">Features</a>
+                </li>
+                <li class="link">
+                    <a href="./contact.html" class="link">Contact</a>
+                </li>
+            </ul>
         </header>
-      </nav>
+    </nav>
 
     <script>
         function validatePassword(password, confirmed_password) {
