--- a/pages/signup.html
+++ b/pages/signup.html
@@ -85,7 +85,7 @@
             <input type="password" id="register-body-confirm_password" name="confirmed_password" placeholder="Confirm Password" required><br>
             <label class="register-body-desc">Letters and numbers only. No special characters. (Min. 8 characters)</label><br><br>
 
-            <a href="../pages/question.html"><button class="login-body__button"  type="submit">Register</button></a>
+            <a ><button class="login-body__button"  type="submit">Register</button></a>
 
         </form>
 
