ABOUT: Added accessibility features by changing js and html

--- a/pages/about.html
+++ b/pages/about.html
@@ -55,7 +55,7 @@
             class="aboutImages"
             id="infoImage"
             src="/Link-Up/images/aboutp1.jpeg"
-            alt="Test"
+            alt="Girl searching for people using magnifying glass"
           />
         </div>
       </div>
@@ -92,7 +92,7 @@
               <img
                 class="aboutImages"
                 src="/Link-Up/images/aboutp1.jpeg"
-                alt="Test"
+                alt="Girl searching for people using magnifying glass"
               />
             </div>
           </div>
@@ -113,7 +113,8 @@
               <img
                 class="aboutImages"
                 src="/Link-Up/images/aboutp4.jpg"
-                alt="Test"
+                alt= "People chatting in a coffee shop setting as well as texting"
+
               />
             </div>
           </div>
@@ -135,7 +136,7 @@
               <img
                 class="aboutImages"
                 src="/Link-Up/images/aboutp2.jpg"
-                alt="Test"
+                alt="Two people sitting back to back on their phones"
               />
             </div>
           </div>
@@ -156,7 +157,7 @@
               <img
                 class="aboutImages"
                 src="/Link-Up/images/aboutp3.jpeg"
-                alt="Test"
+                alt="Earth with links to location, social media, and money"
               />
             </div>
           </div>
@@ -178,7 +179,7 @@
               <img
                 class="aboutImages"
                 src="/Link-Up/images/aboutp5.jpg"
-                alt="Test"
+                alt="Four people at a party"
               />
             </div>
           </div>
