--- a/pages/settings.html
+++ b/pages/settings.html
@@ -9,8 +9,8 @@
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-
   <body class="settings">
+    <!-- Navigation Bar -->
     <nav class="sideNavBar">
       <ul class="navLinksProfile">
         <div class="tooltip">
@@ -104,9 +104,12 @@
         </div>
       </ul>
     </nav>
+    <!-- Container for Setting Content -->
     <article class="s-container">
       <div>
+        <!-- Container for Setting Options -->
         <section id="options">
+          <!-- Change username -->
           <div class="buttons itemO">
             <button id="_username" class="item" type="button">
               Change Username
@@ -124,6 +127,7 @@
               </div>
               <button class="item" type="button" id="change">CHANGE</button>
             </div>
+          <!-- Change password -->
           <div class="buttons itemO">
             <span class="color" id="b2"> </span>
             <button id="_password" type="button">Change Password</button>
@@ -140,6 +144,7 @@
             </div>
             <button class="item" type="button" id="change">CHANGE</button>
           </div>
+          <!-- Update Social Medias Available your Profile  -->
           <div class="buttons itemO">
             <span class="color" id="b3"> </span>
             <button id="_socials" type="button">Update Social Media</button>
@@ -164,6 +169,7 @@
             </div>
             <button class="item" type="button" id="change">CHANGE</button>
           </div>
+          <!-- Update Interest, Bio, and Name -->
           <div class="buttons itemO">
             <span class="color" id="b4"> </span>
             <button id="Interests_bio_name" type="button">
@@ -190,6 +196,7 @@
             <span class="color" id="b5"> </span>
             <button id="_remove" type="button">Remove a link</button>
           </div>
+          <!-- Remove a match -->
           <div class="box" id="choiceRemoveLink">
             <h1>Removing a Match</h1>
             <div class="removeLink" >
@@ -202,6 +209,7 @@
             <span class="color" id="b6"> </span>
             <button id="_deleteAccount" type="button">Delete Account</button>
           </div>
+          <!-- Delete your account -->
           <div class="box" id="choiceDelete">
             <h1>Delete Account</h1>
             <div class="removeLink">
@@ -212,198 +220,6 @@
           </div>
         </section>
       </div>
-      <!-- <div class="item2" hidden>
-  
-          <div class="box" id="choiceUsername">
-            <h1>Changing Username</h1>
-            <div class="inputPosition">
-              <label  class="item">Username </label>
-              <input class="item2" id="old_username" /><br />
-            </div>
-            <div class="inputPosition">
-              <label class="item">New Username </label>
-              <input class="item2" id="new_username" />
-            </div>
-            <button class="item" type="button" id="change">CHANGE</button>
-          </div>
-          <div class="box" id="choicePassword">
-            <h1>Change Password</h1>
-            <div class="inputPosition">
-              <label class="item">Password </label>
-              <input class="item2" id="old_password" type="password" /><br />
-            </div>
-            <div class="inputPosition">
-              <label class="item">New password </label>
-              <input class="item2" id="new_password" />
-            </div>
-            <button class="item" type="button" id="change">CHANGE</button>
-          </div>
-          <div class="box" id="choiceSocials">
-            <h1>Update Social Media</h1>
-            <div class="inputPosition">
-              <label class="item">Tiktok </label>
-              <input class="item2" id="change_tiktok"/><br />
-            </div>
-            <div class="inputPosition">
-              <label class="item">Instagram </label>
-              <input class="item2" id="change_instagram"/><br />
-            </div>
-            <div class="inputPosition">
-              <label class="item">Twitter </label>
-              <input class="item2" id="change_twitter"/><br />
-            </div>
-            <div class="inputPosition">
-              <label class="item">Snapchat </label>
-              <input class="item2" id="change_snapchat"/><br />
-            </div>
-            <button class="item" type="button" id="change">CHANGE</button>
-          </div>
-          <div class="box" id="choiceInterests">
-            <h1>Information</h1>
-            <div class="inputPosition">
-              <label class="item">Name</label>
-              <input class="item2" id="change_Name"/><br />
-            </div>
-            <div class="inputPosition">
-              <label class="item">Interests </label>
-              <input class="item2" id="change_interest"/><br />
-            </div>
-            <div class="inputPosition">
-              <label class="item">Bio </label>
-              <input class="item2" id="change_bio"/><br />
-            </div>
-            <button class="item" type="button" id="change">CHANGE</button>
-          </div>
-          <div class="box" id="choiceRemoveLink">
-            <h1>Removing a Match</h1>
-            <div class="removeLink" >
-              <label>Enter the link's username </label><br>
-              <input id="match_removal"/>
-            </div>
-            <button class="item" type="button" id="change">REMOVE</button>
-          </div>
-          <div class="box" id="choiceDelete">
-            <h1>Delete Account</h1>
-            <div class="removeLink">
-              <label>Please type in your password</label><br>
-              <input id="delete_account" type="password"/>
-            </div>
-            <button class="item" type="button" id="change">DELETE</button>
-          </div>
-        </div> -->
-        <!-- <article class="MobileViewSettings" >
-          <section id="options">
-              <div>
-              <button id="_username" type="button">
-                Change Username
-                <span class="iconify" data-inline="false" data-icon="ic:round-expand-more" style="color: #000;"></span>
-              </button>
-              <div class="click">
-                <div class="inputPosition">
-                  <label  class="item">Username </label><br>
-                  <input class="item2" id="old_username" /><br />
-                </div>
-                <div class="inputPosition">
-                  <label class="item">New Username </label>
-                  <input class="item2" id="new_username" />
-                </div>
-                <button class="item" type="button" id="change">CHANGE</button>
-
-              </div>
-            </div>
-            <div>
-              <button id="_password" type="button">Change Password
-                <span class="iconify" data-inline="false" data-icon="ic:round-expand-more" style="color: #000;"></span>
-              </button>
-              <div class="click">
-                <div class="inputPosition">
-                  <label  class="item">Password </label><br>
-                  <input class="item2" id="old_pssword" type="password"  /><br />
-                </div>
-                <div class="inputPosition">
-                  <label class="item">New Password </label>
-                  <input class="item2" id="new_password" type="password" />
-                </div>
-                <button class="item" type="button" id="change">CHANGE</button>
-              </div>
-            </div>
-            <div>
-              <button id="_socials" type="button">Update Social Media   
-                <span class="iconify" data-inline="false" data-icon="ic:round-expand-more" style="color: #000;"></span>
-              </button>
-              <div class="click">
-              <div class="inputPosition">
-                <label class="item">Tiktok </label>
-                <input class="item2" id="change_tiktok"/><br />
-              </div>
-              <div class="inputPosition">
-                <label class="item">Instagram </label>
-                <input class="item2" id="change_instagram"/><br />
-              </div>
-              <div class="inputPosition">
-                <label class="item">Twitter </label>
-                <input class="item2" id="change_twitter"/><br />
-              </div>
-              <div class="inputPosition">
-                <label class="item">Snapchat </label>
-                <input class="item2" id="change_snapchat"/><br />
-              </div>
-              <button class="item" type="button" id="change">CHANGE</button>
-            </div>
-            </div>
-    
-            <div>
-              <button id="Interests_bio_name" type="button">
-                About You
-                <span class="iconify" data-inline="false" data-icon="ic:round-expand-more" style="color: #000;"></span>
-              </button>
-              <div class="click">
-                <div class="inputPosition">
-                  <label class="item">Name</label>
-                  <input class="item2" id="change_Name"/><br />
-                </div>
-                <div class="inputPosition">
-                  <label class="item">Interests </label>
-                  <input class="item2" id="change_interest"/><br />
-                </div>
-                <div class="inputPosition">
-                  <label class="item">Bio </label>
-                  <input class="item2" id="change_bio"/><br />
-                </div>
-                <button class="item" type="button" id="change">CHANGE</button>
-              </div>
-              </div>
-            </div>
-            <div>
-              <button id="_remove" type="button">Remove a link              
-                <span class="iconify" data-inline="false" data-icon="ic:round-expand-more" style="color: #000;"></span>
-              </button>
-                <div class="click">
-                  <div class="removeLink" >
-                    <label>Enter the link's username </label><br>
-                    <input id="match_removal"/>
-                  </div>
-                  <button class="item" type="button" id="change">REMOVE</button>
-                </div>
-              </div>
-            </div>
-
-            <div>
-              <button id="_deleteAccount" type="button">Delete Account   
-                 <span class="iconify" data-inline="false" data-icon="ic:round-expand-more" style="color: #000;"></span>
-              </button>
-              <div class="click">
-                <div class="removeLink">
-                  <label>Please type in your password</label><br>
-                  <input id="delete_account" type="password"/>
-                </div>
-                <button class="item" type="button" id="change">DELETE</button>
-              </div>
-              </div>
-            </div>
-          </section>
-        </article> -->
-
     </article>
     <script src="../scripts/settings.js"></script>
   </body>
