ABOUT PAGE: Added comments

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
+    <!-- Navigation Bar-->
     <nav class="headerOther">
       <header class="header ">
         <a href="./home.html" class="logo"
@@ -27,13 +28,14 @@
         </ul>
       </header>
   </nav>
-
+    <!-- Main Content on Page-->
     <main class="content">
     <h1 class="title">Why Link Up</h1>
     <p class="mission">
       Our goal is to ease the struggles of <br />making friends in an online
       environment during the pandemic.
     </p>
+    <!-- Container for Bubbles-->
     <div class="bubblesContainer animate">
       <span class="bubble b3 p6" id="p6">Free</span>
       <span class="bubble b1 p1" id="p1">Fast</span>
@@ -41,6 +43,8 @@
       <span class="bubble b1 p2" id="p2">Simple</span>
       <span class="bubble b3 p4" id="p4">Safe</span>
     </div>
+
+    <!-- Container for Holding information about us-->
     <div class="infoContents mainA">
       <div class="infoContainer">
         <div class="infoText item">
@@ -77,7 +81,10 @@
         </button>
       </span>
     </div>
+    <!-- Mobile View-->
     <section class="MobileViewAbout">
+          <!-- Contains each page for the 5 reasons you should Link Up-->
+
       <div class="mitem">
         <div class="b3 infoContents">
           <div class="infoContainer">
@@ -114,7 +121,6 @@
                 class="aboutImages"
                 src="/Link-Up/images/aboutp4.jpg"
                 alt= "People chatting in a coffee shop setting as well as texting"
-
               />
             </div>
           </div>
