TEAM PAGE: Added comments.

--- a/pages/features.html
+++ b/pages/features.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
+  <!--Navigation Bar-->
   <body class="content">
     <nav class="headerOther">
       <header class="header ">
@@ -32,7 +33,10 @@
     <h1 class="title animateFadein">The Team</h1>
 
     <section class="main" id="main">
+      <!--Container for all Team members-->
+
       <div class="featureContents">
+        <!--Team Member: Vanessa Hoang > Includes : Github, Linkedin and about me-->
         <div class="item" id="f1">
           <img src="../images/vanessa.jpg"/ alt="Image of Vanessa Hoang">
           <p class="ft">Vanessa Hoang</p>
@@ -48,6 +52,7 @@
 
         </div>
       </div>
+      <!--Team Member: Ethan Hou > Includes : Github, Linkedin and about me-->
         <div class="item" id="f2">
           <img src="../images/ethan.jpg" alt= "Image of Ethan Hou"/>
           <p class="ft">Ethan Hou</p>
@@ -64,6 +69,7 @@
           </div>
 
         </div>
+        <!--Team Member: Deandra Spike-Madden > Includes : Github, Linkedin and about me-->
         <div class="item" id="f3">
           <img src="../images/deandra.jpg" alt ="Image of Deandra Spike-Madden/>
           <p  class="ft">Deandra Spike-Madden</p>
@@ -81,6 +87,7 @@
           </div>
 
         </div>
+        <!--Team Member: Richard Marquez > Includes : Github, Linkedin and about me-->
         <div class="item" id="f4">
           <img src="../images/richard.jpg" alt="Image of Richard Marquez"/>
           <p  class="ft">Richard Marquez</p>
@@ -94,14 +101,15 @@
           <div class="itemf1">
             <img class="teamIcons" src ="../icons/linkedin.png" alt = "Linkedin Logo"><br> <a href="https://www.linkedin.com/in/richard-marquez-2001" target="_blank">richard-marquez</a>
           </div>
-          </div>
-
+        </div>
         </div>
       </div>
       </div>
-
     </section>
+
+    <!--Mobile View-->
     <section class="MobileView">
+      <!--Team Member: Vanessa Hoang > Includes : Github, Linkedin and about me-->
       <div class="featureInfo item">
         <img src="../images/vanessa.jpg" alt = "Image of Vanessa Hoang"/>
         <p class="ft">Vanessa Hoang</p>
@@ -114,6 +122,7 @@
          </div>
       </div>
       <hr>
+      <!--Team Member: Ethan Hou > Includes : Github, Linkedin and about me-->
       <div class="featureInfo item">
         <img src="../images/ethan.jpg" alt ="Image of Ethan Hou"/>
         <p class="ft">Ethan Hou</p>
@@ -128,6 +137,7 @@
         </div>
       </div>
       <hr>
+      <!--Team Member: Deandra Spike-Madden > Includes : Github, Linkedin and about me-->
       <div class="featureInfo item">
         <img src="../images/deandra.jpg" alt = "Image of Deandra Spike-Madden"/>
         <p  class="ft">Deandra Spike-Madden</p>
@@ -141,6 +151,7 @@
       </div>
       </div>
       <hr>
+      <!--Team Member: Richard Marquez > Includes : Github, Linkedin and about me-->
       <div class="featureInfo item">
         <img src="../images/richard.jpg" alt = "Image of Richard Marquez"/>
         <p  class="ft">Richard Marquez</p>        
