ERROR PAGE: SETUP

--- a/pages/features.html
+++ b/pages/features.html
@@ -71,7 +71,7 @@
         </div>
         <!--Team Member: Deandra Spike-Madden > Includes : Github, Linkedin and about me-->
         <div class="item" id="f3">
-          <img src="../images/deandra.jpg" alt ="Image of Deandra Spike-Madden/>
+          <img src="../images/deandra.jpg" alt ="Image of Deandra Spike-Madden"/>
           <p  class="ft">Deandra Spike-Madden</p>
           <div class="itemf2">
           Hello! My name is Deandra and I am an undergraduate student at Ryerson University. I spend my free time chatting with friends, learning new languages, and working on side projects. I hope we can collaborate in the future. 
