--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
     <title>Why Link-Up</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
-  <body>
+  <body class="about-body">
     <!-- Navigation Bar-->
     <nav class="headerOther">
       <header class="header ">
@@ -194,5 +194,31 @@
     </section>
   </main>
     <script src="../scripts/about.js"></script>
+
+
+  <footer class="footer">
+    <div class="footer-logo">
+      <p>LINKUP</p>
+    </div>
+    <div class="footer-flex">
+      <div class="footer-item">
+        <ul class="menu">
+          <li class="link"><a href="./home.html" class="link">Home</a></li>
+          <li class="link"><a href="./about.html" class="link">About</a></li>
+          <li class="link"><a href="./features.html" class="link">Team</a></li>
+          <li class="link"><a href="./contact.html" class="link">Contact</a></li>
+          <li class="link"><a href="./login.html" class="link">Login</a></li>
+        </ul>
+      </div>
+      <div class="footer-item2">
+        <p class="footer-title">Attributions: <a href="https://storyset.com/online">Illustrations by Freepik Storyset</a></p>
+      </div>
+
+    </div>
+    <hr>
+    <div class="footer-copyright">
+      <p>Copyright &copy 2020 by LinkUp. All rights reserved.</p>
+    </div>
+  </footer>
   </body>
 </html>
