--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,9 +7,7 @@
 
         <nav class="headerOther">
             <header class="header ">
-              <a href="./home.html" class="logo"
-                ><img src="../images/logoG2.png" alt=""
-              /></a>
+              <a href="./home.html" class="logo"><img src="../images/logoG2.png" alt="logo"/></a>
       
               <input class="menu-btn" type="checkbox" id="menu-btn" />
               <label class="menu-icon" for="menu-btn"
@@ -38,10 +36,33 @@
           <label for="msg">Your Message</label><br>
           <textarea id="msg" name="message" placeholder="Feel free to inquire us about anything." required></textarea><br><br>
           <button class="send-btn" type="button">Send</button>
-      </form>
-
+          </form>
         </div>
-
         </main>
+
+        <footer class="footer">
+          <div class="footer-logo">
+            <p>LINKUP</p>
+          </div>
+          <div class="footer-flex">
+            <div class="footer-item">
+              <ul class="menu">
+                <li class="link"><a href="./home.html" class="link">Home</a></li>
+                <li class="link"><a href="./about.html" class="link">About</a></li>
+                <li class="link"><a href="./features.html" class="link">Team</a></li>
+                <li class="link"><a href="./contact.html" class="link">Contact</a></li>
+                <li class="link"><a href="./login.html" class="link">Login</a></li>
+              </ul>
+            </div>
+            <div class="footer-item2">
+              <p class="footer-title">Attributions: <a href="https://storyset.com/online">Illustrations by Freepik Storyset</a></p>
+            </div>
+
+          </div>
+          <hr>
+          <div class="footer-copyright">
+            <p>Copyright &copy 2020 by LinkUp. All rights reserved.</p>
+          </div>
+        </footer>
     </body>
 </html>
