--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
 
     <body class="contact-body">
 
+      <!-- nav bar -->
         <nav class="headerOther">
             <header class="header ">
               <a href="./home.html" class="logo"><img src="../images/logoG2.png" alt="logo"/></a>
@@ -24,7 +25,7 @@
         </nav>
       
         <main class="content">
-          
+        <!-- contact form -->
         <h2>Contact Us!</h2>
         <div class="contact-container">        
           <form class="msg-form">
@@ -40,6 +41,7 @@
         </div>
         </main>
 
+        <!-- footer -->
         <footer class="footer">
           <div class="footer-logo">
             <p>LINKUP</p>
