--- a/pages/features.html
+++ b/pages/features.html
@@ -13,7 +13,7 @@
     <nav class="headerOther">
       <header class="header ">
         <a href="./home.html" class="logo"
-          ><img src="../images/logoG2.png" alt=""
+          ><img src="../images/logoG2.png" alt="logo"
         /></a>
 
         <input class="menu-btn" type="checkbox" id="menu-btn" />
@@ -38,7 +38,7 @@
       <div class="featureContents">
         <!--Team Member: Vanessa Hoang > Includes : Github, Linkedin and about me-->
         <div class="item" id="f1">
-          <img src="../images/vanessa.jpg"/ alt="Image of Vanessa Hoang">
+          <img src="../images/vanessa.jpg" alt="Image of Vanessa Hoang">
           <p class="ft">Vanessa Hoang</p>
           <div class="itemf2">
             I chose to study Computer Science because I find fulfillment in creating projects and this field allows me to combine my passion for technology and design. In my free time, I like to explore a variety of creative outlets and express myself through different mediums of art such as photography and digital art.
