--- a/pages/matcher.html
+++ b/pages/matcher.html
@@ -236,7 +236,7 @@
       </section>
         
       </section>
-  <script src="../scripts/profile.js"/></script>
+  <script src="../scripts/profile.js"></script>
 
   </body>
   
