MATCHER: Added comments and checked for accessibility issues

--- a/pages/matcher.html
+++ b/pages/matcher.html
@@ -8,6 +8,7 @@
     <title>Matcher</title>
   </head>
   <body class="contentB">
+    <!---Navigation Bar-->
     <nav class="sideNavBar">
       <ul class="navLinksProfile">
 
@@ -92,8 +93,12 @@
         </div>
       </ul>
     </nav>
+        <!---Profile Content split into two columns-->
+
     <section class="profileContent">
       <section class= "leftBox">
+      <!---Column 1 for user about me-->
+
       <div class="leftBoxContainer">
         <div class="item">
           <img class="pfp" src="../images/profilep1.jpg">
@@ -113,8 +118,12 @@
         </div>
       </div>
       </section>
+      <!---Column 2 -->
+
       <section class= "rightBox">
         <div class="rightBoxContainer">
+                <!---Users most reccent links -->
+
           <div class="item linksPosition">
             <h1 class="linksTitle">Most Recent Links</h1>
             <section class="mostRecentThree">
@@ -132,12 +141,16 @@
               </div>
               </section>
           </div>
+                    <!--Container showing questionaire results and social media for user-->
+
           <div class="item">
             <div class="personalContainerNav">
               <div class="itemN" id="qProfile"><h1>Questionnaire</h1></div>
               <div class="itemN" id="sProfile"><h1>Social Media</h1></div>
             </div>
             <div class="personalContainer">
+                              <!--Questionnaire Results -->
+
                 <div class="questionaireContainer">
                   <p><b>Sunset or Sunrise: </b><span id="profileQ1a"><br>Question 1 aNSWER</span></p>
                   <p><b>Early Bird or Night owl: </b><span id="profileQ2a"><br>Question 2 aNSWER</span></p>
@@ -149,6 +162,8 @@
                   <p><b>What is your favorite social media: </b><span id="profileQ8a"><br>Question 8 aNSWER</span></p>
                   <p><b>What's your favourite music genre: </b><span id="profileQ9a"><br>Question 9 aNSWER</span></p>
                 </div>
+                                <!--Social Media Container Results -->
+
                 <div class="socialMediaContainer" hidden>
                   <div class="row">
                     <div class="column">
