added content in the head

--- a/pages/about.html
+++ b/pages/about.html
@@ -12,8 +12,7 @@
     <nav class="headerOther">
       <header class="header ">
         <a href="./home.html" class="logo"
-          ><img src="../images/logoG2.png" alt=""
-        /></a>
+          ><img src="../images/logoG2.png" alt="logo"/></a>
 
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"
