--- a/pages/question.html
+++ b/pages/question.html
@@ -1,6 +1,9 @@
-<html class="question-html">
+<html lang="en" class="question-html">
     <head>
-        <link rel = "stylesheet" href = "../css/styles.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Questionnaire</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body class="question-body">
