--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,10 @@
-<html class="contact-html">
+<html lang="en" class="contact-html">
     <head>
-        <link rel = "stylesheet" href = "../css/styles.css">
-    </head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Contact Page</title>
+      <link rel="stylesheet" href="../css/styles.css">
+  </head>
 
     <body class="contact-body">
 
