--- a/pages/features.html
+++ b/pages/features.html
@@ -12,14 +12,10 @@
   <body class="content">
     <nav class="headerOther">
       <header class="header ">
-        <a href="./home.html" class="logo"
-          ><img src="../images/logoG2.png" alt="logo"
-        /></a>
+        <a href="./home.html" class="logo"><img src="../images/logoG2.png" alt="logo"/></a>
 
         <input class="menu-btn" type="checkbox" id="menu-btn" />
-        <label class="menu-icon" for="menu-btn"
-          ><span class="navicon"></span
-        ></label>
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
           <li class="link"><a href="./home.html" class="link">Home</a></li>
           <li class="link"><a href="./about.html" class="link">About</a></li>
