--- a/pages/login.html
+++ b/pages/login.html
@@ -1,11 +1,9 @@
-<html class="login-html">
+<html lang="en" class="login-html">
 <head>
-  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Login</title>
-  </head>
 </head>
 
 <body class="login-bg">
