--- a/pages/question-3.html
+++ b/pages/question-3.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" class="question-html">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Questionnaire</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
