--- a/pages/question-submit.html
+++ b/pages/question-submit.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Questionnaire Submitted</title>
         <link rel="stylesheet" href="../css/styles.css">
         <script src="../scripts/question.js"></script>
     </head>
