final website commit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>  
     <title>HTML Redirect</title>  
     <meta http-equiv="refresh"
-        content="0; url = ./pages/home.html" />  
+        content="0; url = ./pages/home.php" />  
 </head>  
   
 <body>  
