--- a/pages/question.html
+++ b/pages/question.html
@@ -1,18 +1,17 @@
-<html lang="en" class="question-html">
+<html class="question-html">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Questionnaire</title>
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel = "stylesheet" href = "../css/styles.css">
     </head>
 
     <body class="question-body">
         <h2>Friendship Questionnaire</h2>
         <div class="question-container">
             <p class="question-text">Complete this simple questionnaire to get matched up with people with similar qualities/interests!</p>
-            <p class="question-sm-text">Estimated Time: 20 mins</p>
+            <p class="question-sm-text">Estimated Time: 5 mins</p>
             <!-- <button class="question-back-btn">Back</button> -->
+            <a href="./profile.php"><button class="question-btn">Go Back to Profile</button></a>
             <a href="question-3.html"><button class="question-btn">Let's get matched!</button></a>
+            
             
         </div>
     </body>
